Remove test jvmArgs